@@ -18,7 +18,7 @@
  * Boston, MA 02111-1307, USA.
  */
 /**
- * SECTION:Closures
+ * SECTION:gclosure
  * @Short_description: Functions as first-class objects
  * 
  * A #GClosure represents a callback supplied by the programmer. It will generally
